<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingStart="20dp"
            android:text="@string/calculator"
            android:textColor="@color/black"
            android:textSize="25sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/_0"
            android:textColor="@color/black"
            android:textSize="45sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/_1"
            android:textColor="@color/white"
            android:textSize="25sp"
            />

        <Button
            android:id="@+id/btn2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/_2"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/_3"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnadd"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/_4"
            android:textColor="@color/white"
            android:textSize="25sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/_5"
            android:textColor="@color/white"
            android:textSize="25sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/_6"
            android:textColor="@color/white"
            android:textSize="25sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btndiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/division"
            android:textColor="@color/white"
            android:textSize="25sp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/_7"
            android:textColor="@color/white"
            android:textSize="25sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/_8"
            android:textColor="@color/white"
            android:textSize="25sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/_9"
            android:textColor="@color/white"
            android:textSize="25sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnsub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/subtract"
            android:textColor="@color/white"
            android:textSize="25sp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/zeroDigit"
            android:textColor="@color/white"
            android:textSize="25sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/c"
            android:textColor="@color/white"
            android:textSize="25sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnequals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/equals"
            android:textColor="@color/white"
            android:textSize="25sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnmul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/multiply"
            android:textColor="@color/white"
            android:textSize="25sp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>